enlarged logo, add suburb field in form 3509, fix alignment in template product single

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -613,7 +613,7 @@ ul.headertop__nav {
   margin-left: -10px;
 
   @include breakpoint("small") {
-    width: 170px;
+    width: 200px;
     float: left;
     margin-left: 0;
   }
